--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 .DS_Store
 *~
 .ipynb_checkpoints/
+
+#CL files
+*.FASL
+*.fasl
+*.lisp-temp
+*.dfsl
+*.pfsl
+*.d64fsl
+*.p64fsl
+*.lx64fsl
+*.lx32fsl
+*.dx64fsl
+*.dx32fsl
+*.fx64fsl
+*.fx32fsl
+*.sx64fsl
+*.sx32fsl
+*.wx64fsl
+*.wx32fsl
